# fofscreen

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmarks.rs
capture/: Cargo.toml
capture/src/: main.rs
detect/: Cargo.toml
detect/benches/: benchmarks.rs
detect/examples/: draw.rs
detect/src/: face_detection.rs  lib.rs
examples/: draw.rs
src/: alert.rs  draw.rs  face_detection.rs  face_encoding.rs  geometry.rs  image_matrix.rs  landmark_prediction.rs  lib.rs  main.rs  mod.rs  torch_face_detection.rs
src/capture/: utils.rs
src/detect/: face_detection.rs  face_encoding.rs  image_matrix.rs  landmark_prediction.rs  lib.rs  mod.rs
tests/: benchmarks.rs
