[package]
authors = ["frag <francesco@amethix.com>"]
name = "fofscreen"
version = "0.1.0"
edition = "2018"

# build = "build.rs"

[dependencies]
clap = "2.33.3"
nokhwa = { version = "0.3.0", features = ["input-uvc", "input-v4l"] }
glium = "0.30.0"
glutin = "0.27.0"
flume = "0.10.7"
cpp = "0.5.4"
image = "0.23.4"

# capture = { version = "=0.1.0", path = "capture" }
# detect = { version = "=0.1.0", path = "detect" }

# [workspace]
# members = ["capture", "detect"]

[build-dependencies]
cpp_build = "0.5.4"
reqwest = {version = "0.9.3", optional = true}
bzip2 = { version = "0.3.3", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = []
download-models = ["reqwest", "bzip2"]

