[package]
name = "capture"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nokhwa = { version = "0.3.2", features = ["input-uvc"] }
clap = "2.33.3"
glium = "0.30.0"
glutin = "0.27.0"
flume = "0.10.7"
